--- a/src/main/resources/templates/create_transaction.html
+++ b/src/main/resources/templates/create_transaction.html
@@ -1,41 +1,96 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <!-- Include your CSS and other header content here -->
+  <title>Create Transaction</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" th:href="@{/fonts/icomoon/style.css}"/>
+  <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+  <link rel="stylesheet" th:href="@{/css/jquery-ui.css}"/>
+  <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}"/>
+  <link rel="stylesheet" th:href="@{/css/owl.theme.default.min.css}"/>
+  <link rel="stylesheet" th:href="@{/css/owl.theme.default.min.css}"/>
+  <link rel="stylesheet" th:href="@{/css/jquery.fancybox.min.css}"/>
+  <link rel="stylesheet" th:href="@{/css/bootstrap-datepicker.css}"/>
+  <link rel="stylesheet" th:href="@{/fonts/flaticon/flaticon.css}"/>
+  <link rel="stylesheet" th:href="@{/css/aos.css}"/>
+  <link rel="stylesheet" th:href="@{/css/style.css}"/>
+  <style>
+    .white-text {
+      color: white;
+    }
+  </style>
 </head>
-<body>
-<div>
-  <h2>Create Transaction</h2>
-  <form th:action="@{/transactions/create}" th:object="${transaction}" method="post">
-    <!-- Transaction Details -->
-    <div class="form-group">
-      <label for="amount">Amount:</label>
-      <input type="number" id="amount" name="amount" th:field="*{amount}" required>
-    </div>
 
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+<div id="overlayer"></div>
+<div class="loader">
+  <div class="spinner-border text-primary" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
 
-    <div class="form-group">
-      <label for="recipient">Recipient:</label>
-      <select id="recipient" name="recipient" th:field="*{recipient.recipientIdentifier}" required>
-        <option th:each="user : ${users}" th:value="${user.username}" th:text="${user.username}"></option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="description">Description:</label>
-      <textarea id="description" name="description" th:field="*{transactionDescription}" required></textarea>
-    </div>
-    <div class="form-group">
-      <label for="wallet">Choose Wallet:</label>
-      <select id="wallet" name="wallet" th:field="*{walletId}" required>
-        <option th:each="wallet : ${wallets}" th:value="${wallet.id}" th:text="${wallet.id}"></option>
-      </select>
-    </div>
-
-    <!-- Submit Button -->
-    <div class="form-group">
-      <button type="submit">Create Transaction</button>
-    </div>
-  </form>
 </div>
+
+<div th:replace="fragments/header :: header"></div>
+<div class="site-blocks-cover overlay" th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
+     data-aos="fade" id="home-section">
+
+  <div class="container">
+    <div class="row align-items-center justify-content-center">
+      <div class="col-md-10 mt-lg-5 text-center">
+        <h1>Create Transaction</h1><br/>
+        <!-- Transaction Form -->
+        <form th:action="@{/transactions/create}" th:object="${transaction}" method="post">
+          <!-- Transaction Details -->
+          <div class="form-group">
+            <label for="amount" class="white-text">Amount:</label>
+            <input type="number" id="amount" name="amount" class="form-control"
+                   th:classappend="${#fields.hasErrors('amount')} ? 'is-invalid' : ''" required min="1">
+            <small id="amountErrorMessage" style="color: red; display: none;">Amount must be greater than zero.</small>
+          </div>
+
+          <div class="form-group" >
+            <label for="recipient" class="white-text">Recipient:</label>
+            <select id="recipient" name="recipient" th:field="*{recipient.recipientIdentifier}" required>
+              <option th:each="user : ${users}" th:value="${user.username}" th:text="${user.username}"></option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="description" class="white-text">Description:</label>
+            <textarea id="description" name="description" th:field="*{transactionDescription}" required></textarea>
+          </div>
+          <div class="form-group">
+            <label for="wallet" class="white-text">Choose Wallet:</label>
+            <select id="wallet" name="wallet" th:field="*{walletId}" required>
+              <option th:each="wallet : ${wallets}" th:value="${wallet.id}" th:text="${wallet.id}"></option>
+            </select>
+          </div>
+
+          <!-- Submit Button -->
+          <div class="form-group">
+            <button type="submit" th:disabled="${#fields.hasErrors()}">Create Transaction</button>
+          </div>
+        </form>
+        <!-- End Transaction Form -->
+      </div>
+    </div>
+  </div>
+</div>
+
+<div th:replace="fragments/footer :: footer"></div>
+
+<script th:src="@{/js/jquery-3.3.1.min.js}"></script>
+<script th:src="@{/js/jquery-ui.js}"></script>
+<script th:src="@{/js/popper.min.js}"></script>
+<script th:src="@{/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/owl.carousel.min.js}"></script>
+<script th:src="@{/js/jquery.countdown.min.js}"></script>
+<script th:src="@{/js/jquery.easing.1.3.js}"></script>
+<script th:src="@{/js/aos.js}"></script>
+<script th:src="@{/js/jquery.fancybox.min.js}"></script>
+<script th:src="@{/js/jquery.sticky.js}"></script>
+<script th:src="@{/js/isotope.pkgd.min.js}"></script>
+<script th:src="@{/js/main.js}"></script>
 </body>
 </html>
